--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,8 @@ edition       = "2018"
 [dependencies]
 is-match     = "0.1"
 failure      = "0.1"
-futures      = "0.1"
-ipfs-api     = "0.5.0-alpha2"
+futures      = "0.3"
+ipfs-api     = "0.7"
 serde        = "1"
 serde_derive = "1"
 serde_json   = "1"
