--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,4 +33,4 @@ config       = "0.9"
 toml         = "0.4"
 hyper        = "0.12"
 itertools    = "0.7"
-async-std    = { version = "1", features = ["attributes"] }
+tokio        = { version = "0.2", features = ["full"] }
