--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,3 +34,4 @@ toml         = "0.4"
 hyper        = "0.12"
 itertools    = "0.7"
 tokio        = { version = "0.2", features = ["full"] }
+add_getters_setters = "1.1"
