--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,4 +35,5 @@ hyper        = "0.12"
 itertools    = "0.7"
 tokio        = { version = "0.2", features = ["full"] }
 add_getters_setters = "1.1"
+xdg          = "2"
 structopt    = "0.3"
