--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ edition       = "2018"
 is-match     = "0.1"
 failure      = "0.1"
 futures      = "0.3"
-ipfs-api     = "0.7"
+ipfs-api     = { version = "0.7", features = ["actix"], default-features = false }
 serde        = "1"
 serde_derive = "1"
 serde_json   = "1"
@@ -39,3 +39,6 @@ xdg          = "2"
 structopt    = "0.3"
 web-view     = "0.6"
 handlebars   = "3"
+actix-rt     = "1"
+actix-web    = "2"
+
