--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,3 +37,5 @@ tokio        = { version = "0.2", features = ["full"] }
 add_getters_setters = "1.1"
 xdg          = "2"
 structopt    = "0.3"
+web-view     = "0.6"
+handlebars   = "3"
