--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ edition       = "2018"
 
 [dependencies]
 is-match     = "0.1"
-failure      = "0.1"
+anyhow       = "1"
 futures      = "0.3"
 ipfs-api     = { version = "0.7", features = ["actix"], default-features = false }
 serde        = "1"
@@ -42,3 +42,4 @@ handlebars   = "3"
 actix-rt     = "1"
 actix-web    = "2"
 port_check   = "0.1"
+failure      = "0.1"
