--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,12 @@ homepage      = "http://github.com/matthiasbeyer/distrox"
 edition       = "2018"
 
 [dependencies]
+# TODO: Replace with thiserror
+anyhow      = "1"
+
+async-trait = "0.1"
+cid = "0.6"
+daglib = { git = "https://git.sr.ht/~matthiasbeyer/daglib", branch = "master" }
+ipfs-embed = "0.19"
+libipld = "0.11"
+tokio       = { version = "1", features = ["full"] }
