--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,13 @@ edition       = "2018"
 # TODO: Replace with thiserror
 anyhow      = "1"
 
-async-trait = "0.1"
-cid = "0.6"
-daglib = { git = "https://git.sr.ht/~matthiasbeyer/daglib", branch = "master" }
-ipfs-embed = "0.19"
-libipld = "0.11"
-tokio       = { version = "1", features = ["full"] }
+async-trait  = "0.1"
+cid          = "0.6"
+chrono       = "0.4"
+daglib       = { git = "https://git.sr.ht/~matthiasbeyer/daglib", branch = "master" }
+ipfs-embed   = "0.19"
+libipld      = "0.11"
+libipld-cbor = "0.11"
+mime         = "0.3"
+tokio        = { version = "1", features = ["full"] }
+
