--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,18 +20,21 @@ edition       = "2018"
 anyhow           = "1"
 
 async-trait      = "0.1"
-cid              = "0.6"
 chrono           = "0.4"
+cid              = "0.6"
 clap-v3          = "3.0.0-beta.1"
 daglib           = { git = "https://git.sr.ht/~matthiasbeyer/daglib", branch = "master" }
-ipfs-embed       = "0.19"
+ipfs-embed       = { version = "0.20", features = ["tokio"] }
 libipld          = "0.11"
 libipld-cbor     = "0.11"
-libp2p           = "0.36"
+libp2p           = "*"
 libp2p-bitswap   = "*"
 libp2p-core      = "*"
 libp2p-gossipsub = "*"
 libp2p-ping      = "*"
 mime             = "0.3"
+rand_core        = { version = "0.6", features = ["getrandom"] }
+rand_os          = "0.2"
+ed25519-dalek    = "*"
 tokio            = { version = "1", features = ["full"] }
 
