--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,29 +16,26 @@ homepage      = "http://github.com/matthiasbeyer/distrox"
 edition       = "2018"
 
 [dependencies]
-# TODO: Replace with thiserror
-anyhow           = "1"
-
-env_logger       = "0.8"
-log              = "0.4"
-
-async-trait      = "0.1"
-chrono           = "0.4"
-cid              = "0.6"
-clap-v3          = "3.0.0-beta.1"
-daglib           = { git = "https://git.sr.ht/~matthiasbeyer/daglib", branch = "master" }
-futures          = "0.3"
-ipfs-embed       = { version = "0.20", features = ["tokio"] }
-libipld          = "0.11"
-libipld-cbor     = "0.11"
+anyhow                 = "1"
+async-trait            = "0.1"
+chrono                 = "0.4"
+cid                    = "0.7"
+clap-v3                = "3.0.0-beta.1"
+daglib                 = { git = "https://git.sr.ht/~matthiasbeyer/daglib", branch = "master" }
+env_logger             = "0.8"
+futures                = "0.3"
+ipfs-api-backend-hyper = { version = "0.2", features = [ "with-hyper-tls" ] }
+log                    = "0.4"
+tokio                  = { version = "1", features = ["full"] }
+mime                   = "0.3"
+libipld-cbor           = "0.12"
+libipld                = "0.12"
 libp2p           = "*"
 libp2p-bitswap   = "*"
 libp2p-core      = "*"
 libp2p-gossipsub = "*"
 libp2p-ping      = "*"
-mime             = "0.3"
 rand_core        = { version = "0.6", features = ["getrandom"] }
 rand_os          = "0.2"
 ed25519-dalek    = "*"
-tokio            = { version = "1", features = ["full"] }
 
