--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ env_logger             = "0.8"
 futures                = "0.3"
 ipfs-api-backend-hyper = { version = "0.2", features = [ "with-hyper-tls" ] }
 log                    = "0.4"
-tokio                  = { version = "1", features = ["full"] }
+tokio                  = { version = "1", features = ["full", "rt", "macros"] }
 mime                   = "0.3"
 libipld-cbor           = "0.12"
 libipld                = "0.12"
