--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ edition       = "2018"
 [dependencies]
 anyhow                 = "1"
 async-trait            = "0.1"
-chrono                 = "0.4"
+chrono                 = { version = "0.4", features = ["serde"] }
 cid                    = "0.7"
 clap-v3                = "3.0.0-beta.1"
 daglib                 = { git = "https://git.sr.ht/~matthiasbeyer/daglib", branch = "master" }
@@ -39,3 +39,5 @@ rand_core        = { version = "0.6", features = ["getrandom"] }
 rand_os          = "0.2"
 ed25519-dalek    = "*"
 http             = "0.2"
+serde            = "1"
+serde_json       = "1"
