--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,10 +39,16 @@ libp2p           = "0.39.1"
 tracing          = "0.1"
 ctrlc            = "3.2"
 
+iced_native      = "0.4.0"
+iced_wgpu        = "0.4.0"
+
 [dependencies.ipfs]
 git = "https://github.com/rs-ipfs/rust-ipfs/"
 rev = "ad3ab49b4d9236363969b0f74f14aabc7c906b3b"
 
+[dependencies.iced]
+version          = "0.3.0"
+features         = ["glow", "tokio", "debug"]
 
 [dev-dependencies]
 multibase = "0.8"
