--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,17 +19,14 @@ edition       = "2018"
 anyhow                 = "1"
 async-trait            = "0.1"
 chrono                 = { version = "0.4", features = ["serde"] }
-cid                    = "0.7"
+cid                    = "0.5"
 clap                   = "3.0.0-beta.5"
 daglib                 = { git = "https://git.sr.ht/~matthiasbeyer/daglib", branch = "master" }
 env_logger             = "0.8"
 futures                = "0.3"
-ipfs-api-backend-hyper = { version = "0.2", features = [ "with-hyper-tls" ] }
 log                    = "0.4"
 tokio                  = { version = "1", features = ["full", "rt", "macros"] }
 mime                   = "0.3"
-libipld-cbor           = "0.12"
-libipld                = "0.12"
 rand_core        = { version = "0.6", features = ["getrandom"] }
 rand_os          = "0.2"
 ed25519-dalek    = "*"
@@ -38,3 +35,13 @@ serde            = "1"
 serde_json       = "1"
 getset           = "0.1"
 xdg              = "2.4"
+libp2p           = "0.41"
+tracing          = "0.1"
+
+[dependencies.ipfs]
+git = "https://github.com/rs-ipfs/rust-ipfs/"
+rev = "ad3ab49b4d9236363969b0f74f14aabc7c906b3b"
+
+
+[dev-dependencies]
+multibase = "0.8"
