--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -20,7 +20,7 @@ anyhow        = "1"
 async-trait   = "0.1"
 chrono        = { version = "0.4", features = ["serde"] }
 cid           = "0.5"
-clap          = "=3.0.0-beta.5"
+clap          = { version = "3", features = ["cargo"] }
 daglib        = { git = "https://git.sr.ht/~matthiasbeyer/daglib", branch = "master" }
 env_logger    = "0.8"
 futures       = "0.3"
