--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -21,7 +21,7 @@ async-trait   = "0.1"
 chrono        = { version = "0.4", features = ["serde"] }
 cid           = "0.5"
 clap          = "3"
-daglib        = { git = "https://git.sr.ht/~matthiasbeyer/daglib", branch = "master" }
+daglib        = { git = "https://github.com/matthiasbeyer/daglib", branch = "master" }
 env_logger    = "0.8"
 futures       = "0.3"
 log           = "0.4"
