--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,25 +3,25 @@ updates:
 - package-ecosystem: cargo
   directory: "/cli"
   schedule:
-    interval: daily
+    interval: weekly
   open-pull-requests-limit: 0
   commit-message:
     prefix: "[cli]"
 - package-ecosystem: cargo
   directory: "/lib"
   schedule:
-    interval: daily
+    interval: weekly
   open-pull-requests-limit: 0
   commit-message:
     prefix: "[lib]"
 - package-ecosystem: cargo
   directory: "/gui"
   schedule:
-    interval: daily
+    interval: weekly
   open-pull-requests-limit: 0
   commit-message:
     prefix: "[gui]"
 - package-ecosystem: github-actions
   directory: "/"
   schedule:
-    interval: daily
+    interval: weekly
