--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -16,33 +16,8 @@ homepage      = "http://github.com/matthiasbeyer/distrox"
 edition       = "2018"
 
 [dependencies]
-anyhow        = "1"
-async-trait   = "0.1"
-chrono        = { version = "0.4", features = ["serde"] }
-cid           = "0.5"
-clap          = "3"
-daglib        = { git = "https://github.com/matthiasbeyer/daglib", branch = "master" }
-env_logger    = "0.8"
-futures       = "0.3"
-log           = "0.4"
-tokio         = { version = "1", features = ["full", "rt", "macros"] }
-mime          = "0.3"
-rand_core     = { version = "0.6", features = ["getrandom"] }
-rand_os       = "0.2"
-ed25519-dalek = "*"
-http          = "0.2"
-serde         = "1"
-serde_json    = "1"
-getset        = "0.1"
-xdg           = "2.4"
-tracing       = "0.1"
-ctrlc         = "3.2"
-libp2p = "0.50"
-
-[dependencies.iroh_rpc_client]
-git = "https://github.com/n0-computer/iroh"
-package = "iroh-rpc-client"
-rev = "54b0830423d2d9e7ce9439915380401dc206954a"
-
-[dev-dependencies]
-multibase = "0.8"
+thiserror = "1"
+getset = "0.1"
+tracing = "0.1"
+libp2p = "0.49"
+libipld = "0.14"
