--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -16,8 +16,9 @@ homepage      = "http://github.com/matthiasbeyer/distrox"
 edition       = "2018"
 
 [dependencies]
-thiserror = "1"
+chrono = "0.4"
 getset = "0.1"
-tracing = "0.1"
-libp2p = "0.49"
 libipld = "0.14"
+libp2p = "0.49"
+thiserror = "1"
+tracing = "0.1"
