--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,11 @@ jobs:
   check:
     name: Check
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        rust:
+          - 1.65.0
+          - stable
 
     steps:
       - name: Checkout sources
@@ -20,7 +25,7 @@ jobs:
       - name: Install toolchain
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: 1.65.0
+          toolchain: ${{ matrix.rust }}
           override: true
 
       - uses: swatinem/rust-cache@v2
