--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,9 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y webkit2gtk-4.0
 
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v1
+
       - name: Run cargo check
         uses: actions-rs/cargo@v1
         with:
