--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,11 @@ jobs:
 
       - uses: swatinem/rust-cache@v2
 
+      - name: Install deps
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y webkit2gtk-4.0
+
       - name: Run cargo check
         uses: actions-rs/cargo@v1
         with:
