Let bors check PR status
By checking commit-lint and check-format workflow status.

Signed-off-by: Matthias Beyer <mail@beyermatthias.de>

--- a/bors.toml
+++ b/bors.toml
@@ -1,6 +1,10 @@
 status = [
     "CI",
 ]
+pr_status = [
+    "commit-lint",
+    "check-format"
+]
 update_base_for_deletes = true
 cut_body_after = "<details>"
 delete_merged_branches = true
