--- a/gui/frontend/Cargo.toml
+++ b/gui/frontend/Cargo.toml
@@ -17,3 +17,14 @@ edition       = "2018"
 
 [dependencies]
 yew = { version = "0.20.0", features = ["csr"] }
+yew-router = "0.16.0"
+wasm-bindgen = "0.2.78"
+serde-wasm-bindgen = "0.4"
+web-sys = "0.3.55"
+wasm-bindgen-futures = "0.4.28"
+js-sys = "0.3.55"
+wasm-logger = "0.2"
+log = "0.4"
+thiserror = "1"
+
+distrox-gui-types = { path = "../types" }
