--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -23,6 +23,7 @@ futures = "0.3"
 getset = "0.1"
 libipld = "0.15"
 libp2p = "0.50"
+serde = { version = "1", features = ["derive"] }
 thiserror = "1"
 time = { version = "0.3", features = ["parsing", "serde-human-readable"] }
 tokio = { version = "1", features = ["sync"] }
