--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -18,6 +18,7 @@ edition       = "2018"
 [dependencies]
 anyhow = "1" # only required because error handling in iroh is not implemented yet :-(
 async-trait = "0.1"
+bytes = "1.3"
 cid = "0.9"
 futures = "0.3"
 getset = "0.1"
