--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -28,6 +28,7 @@ serde = { version = "1", features = ["derive"] }
 thiserror = "1"
 time = { version = "0.3", features = ["parsing", "serde-human-readable"] }
 tokio = { version = "1", features = ["sync"] }
+toml = "0.5"
 tracing = "0.1"
 
 [dependencies.iroh-rpc-client]
