--- a/.github/workflows/commit-lint.yml
+++ b/.github/workflows/commit-lint.yml
@@ -16,4 +16,4 @@ jobs:
         with:
           python-version: '3.x'
       - run: pip install gitlint
-      - run: gitlint --commits $(git merge-base origin/main HEAD)..HEAD
+      - run: gitlint --commits $(git merge-base origin/master HEAD)..HEAD
