--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,10 +23,9 @@ jobs:
         uses: actions/checkout@v3.1.0
 
       - name: Install toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@master
         with:
           toolchain: ${{ matrix.rust }}
-          override: true
 
       - uses: swatinem/rust-cache@v2
 
@@ -42,9 +41,7 @@ jobs:
         run: mkdir gui/frontend/dist
 
       - name: Run cargo check
-        uses: actions-rs/cargo@v1
-        with:
-          command: check
+        run: cargo check
 
 
   check-flake:
@@ -74,16 +71,19 @@ jobs:
         image: ipfs/kubo
         ports:
           - 5001:5001
-
+    strategy:
+      matrix:
+        rust:
+          - 1.65.0
+          - stable
     steps:
       - name: Checkout sources
         uses: actions/checkout@v3.1.0
 
       - name: Install toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@master
         with:
-          toolchain: 1.65.0
-          override: true
+          toolchain: ${{ matrix.rust }}
 
       - uses: swatinem/rust-cache@v2
 
@@ -99,10 +99,7 @@ jobs:
         env:
           IPFS_HOST_ADDR: "127.0.0.1:5001"
           TEST_STATE_DIR: ${{ runner.temp }}
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: -p distrox-lib
+        run: cargo test -p distrox-lib
 
 
   # We need some "accummulation" job here because bors fails (timeouts) to
