--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -33,14 +33,12 @@ toml = "0.5"
 tracing = "0.1"
 
 [dependencies.iroh-rpc-client]
-git = "https://github.com/n0-computer/iroh/"
-rev = "35955d6b9b505d2c35f99e4c618293c70bcca1a7"
+version = "0.1.3"
 package = "iroh-rpc-client"
 optional = true
 
 [dependencies.iroh-rpc-types]
-git = "https://github.com/n0-computer/iroh/"
-rev = "35955d6b9b505d2c35f99e4c618293c70bcca1a7"
+version = "0.1.3"
 package = "iroh-rpc-types"
 optional = true
 
