Make CI check all features
Signed-off-by: Matthias Beyer <mail@beyermatthias.de>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
         run: mkdir gui/frontend/dist
 
       - name: Run cargo check
-        run: cargo check
+        run: cargo check --all-features
 
 
   check-flake:
