--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,22 @@ jobs:
           name: distrox
           # If you chose API tokens for write access OR if you have a private cache
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+      - run: nix --extra-experimental-features "nix-command flakes" flake check
+
+
+  test-testcontainers:
+    name: test-testcontainers
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3.2.0
+      - uses: cachix/install-nix-action@v18
+        with:
+          nix_path: nixpkgs=channel:nixos-unstable
+      - uses: cachix/cachix-action@v12
+        with:
+          name: distrox
+          # If you chose API tokens for write access OR if you have a private cache
+          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
       - name: Enable Docker Remote API on Localhost
         shell: bash
         run: |
@@ -30,7 +46,8 @@ jobs:
           sudo cp ./.github/docker.override.conf /etc/systemd/system/docker.service.d/override.conf
           sudo systemctl daemon-reload
           sudo systemctl restart docker
-      - run: nix --extra-experimental-features "nix-command flakes" flake check
+      - run: nix --extra-experimental-features "nix-command flakes" build .#distrox-lib-run-tests
+      - run: ./result/bin/distrox-lib-run-tests
 
 
   # We need some "accummulation" job here because bors fails (timeouts) to
@@ -42,6 +59,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - check-flake
+      - test-testcontainers
     steps:
       - name: CI succeeded
         run: exit 0
