--- a/distrox-types/Cargo.toml
+++ b/distrox-types/Cargo.toml
@@ -7,3 +7,5 @@ license.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+mime = "0.3"
+time = { version = "0.3", features = ["serde"] }
