--- a/distrox-gui/Cargo.toml
+++ b/distrox-gui/Cargo.toml
@@ -4,6 +4,20 @@ edition.workspace = true
 version.workspace = true
 license.workspace = true
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+build = "build.rs"
+
+[lib]
+name = "distrox_gui"
+path = "src/lib.rs"
+
+[[bin]]
+name = "distrox-gui"
+path = "src/main.rs"
 
 [dependencies]
+slint = "1.0"
+
+thiserror.workspace = true
+
+[build-dependencies]
+slint-build = "1.0"
