--- a/distrox-types/Cargo.toml
+++ b/distrox-types/Cargo.toml
@@ -7,5 +7,6 @@ license.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+libipld = { version = "0.16", features = ["dag-cbor", "libipld-cbor", "libipld-cbor-derive"] }
 mime = "0.3"
-time = { version = "0.3", features = ["serde"] }
+time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
