--- a/distrox-lib/Cargo.toml
+++ b/distrox-lib/Cargo.toml
@@ -18,6 +18,10 @@ rust-ipfs = "0.3.19"
 void = "1"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
+toml = "0.7"
+serde = "1"
+tokio = { version = "1", features = ["fs", "macros"] }
+xdg = "2.5"
 
 [dependencies.libp2p]
 version = "0.51.3"
