--- a/distrox-lib/Cargo.toml
+++ b/distrox-lib/Cargo.toml
@@ -34,5 +34,5 @@ default-features = false
 features = [ "peerid" ]
 
 [dev-dependencies]
-tokio = { version = "1", features = ["test-util"] }
+tokio = { workspace = true, features = ["test-util"] }
 env_logger = "0.10"
