Add main() setup for starting only GUI
Signed-off-by: Matthias Beyer <mail@beyermatthias.de>

--- a/distrox-gui/Cargo.toml
+++ b/distrox-gui/Cargo.toml
@@ -21,6 +21,8 @@ thiserror.workspace = true
 
 distrox-lib = { path = "../distrox-lib" }
 tokio = { workspace = true, features = ["sync"] }
+tracing-subscriber = { version = "0.3", features = [ "fmt", "std" ] }
+tracing = "0.1"
 
 [build-dependencies]
 slint-build = "1.1"
